------------------------------------------------------------------------
r2157 | rdahnke | 2022-12-03 14:10:57

Changed paths:
 M CHANGES.txt


New:    Added cat_main_report?
------------------------------------------------------------------------
r2156 | rdahnke | 2022-12-03 14:08:53

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m


Fixed:    Small corrections on the CAT report batch.------------------------------------------------------------------------
r2155 | gaser | 2022-12-02 16:37:30

Changed paths:
 M CHANGES.txt


Changed: Added contrast field to cat_conf_factorial to define contrasts for 
         voxel-wise covariate.
Fixed:   Corrected fieldnames in cat_stat_check_SPM that were different.
------------------------------------------------------------------------
r2152 | rdahnke | 2022-12-02 12:53:43

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_main1639.m
 M cat_main_reportfig.m
 M cat_main_reportstr.m
 M cat_surf_info.m
 M cat_surf_rename.m
 M cat_surf_render2.m


New:     Added matlabbatch cat_main_report for retrospective creation of CAT 
         reports based on the XML file in cat_conf_tools. 
Changed: Small addaptions to use cat_main_reportstr, cat_main_reportfig,
         cat_surf_render2, cat_surf_info and cat_surf_rename
         for the retrospective report generation. 
------------------------------------------------------------------------
r2151 | gaser | 2022-12-01 11:35:59

Changed paths:
 M CHANGES.txt
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m


Changed: Removed some unnecessary lines in cat_stat_check_SPM.m.
Changed: Added check for longitudinal designs if design matrix is not given as
         argument in job parameter to cat_stat_homogeneity.m.
------------------------------------------------------------------------
r2150 | gaser | 2022-12-01 10:59:13

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M cat12.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m
 M cat_system.m